--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/DimQ1/dadJokeLineTool/issues"
   },
-  "homepage": "https://github.com/DimQ1/dadJokeLineTool#readme"
+  "homepage": "https://github.com/DimQ1/dadJokeLineTool#readme",
+  "dependencies": {
+    "prompts": "^2.1.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-plugin-import": "^2.17.3"
+  }
 }
