--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "NodeJSProjects",
   "version": "1.0.0",
   "description": "This is learning project",
-  "main": "index.js",
+  "main": "linetool.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node linetool.js"
   },
   "repository": {
     "type": "git",
